# LOLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/Sources/: GameSettings.cpp
Game/Sources/Scenes/: MenuScene.hpp  SceneRegistrator.cpp
LOLEngine/: CMakeLists.txt
LOLEngine/Include/Engine/: CommonEngineInfo.hpp  ExternalSettings.hpp
LOLEngine/Include/Engine/Core/: AppSettings.hpp  ITimer.hpp  Logger.hpp  ServiceProvider.hpp
LOLEngine/Include/Engine/Gameplay/: BaseScene.hpp  SceneTraits.hpp
LOLEngine/Internal/: main.cpp
LOLEngine/Internal/Engine/Core/: Application.cpp  Application.hpp  Logger.cpp  Timer.cpp  Timer.hpp
LOLEngine/Internal/Engine/Gameplay/: BaseScene.cpp  SceneManager.cpp  SceneManager.hpp
examples/: CMakeLists.txt
examples/empty_project/: CMakeLists.txt
examples/empty_project/src/: appInit.cpp  game.cpp  mainScene.cpp  mainScene.hpp
include/engine/: engineInit.hpp  gameApp.hpp
include/engine/gameplay/: gameplayForward.hpp  scene.hpp
src/: CMakeLists.txt  main.cpp
src/engine/core/: application.cpp  application.hpp  glfwForward.cpp  glfwForward.hpp  windowGLFW.cpp  windowGLFW.hpp
src/engine/gameplay/: sceneManager.cpp  sceneManager.hpp
